--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "node-modules": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
